# hotdeal-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
dags/: hotdeal_dag.py
dbt/: main.py  pyproject.toml
dbt/hotdeal/: dbt_project.yml
dbt/hotdeal/macros/: generate_schema_name.sql
dbt/hotdeal/models/: stg_hotdeals.sql
dbt/hotdeal/models/mart/: mart_hotdeals.sql
dbt/hotdeal/models/staging/: schema.yml
