[project]
name = "hotdeal-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "google-cloud-bigquery>=3.41.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "dbt",
]
